- [API_PARSER] [ARMIS_CENTRIX] Fix condition to ask for a new token
- [FRONTEND] Hot-disable a collector manually
- [SERVICES] Prevent errors when deleted configuration files do not exist
- [CLUSTER_JOIN] Fix writing of certificates on new node's disk
- [REDIS] Use proper Sentinel client when updating service
### Changed
- [API_PARSER] [CROWDSTRIKE] Evolve collector to use API v2 instead of v1
- [API_PARSER] [ARMIS_CENTRIX] Collect at max 1h of range to avoid API taking too long to answer
- [API_PARSER] [BEYONDTRUST_REPORTINGS] Add session_details in logs and split them
- [FILEBEAT] Separate building configurations and restarting service
- [GUI] Improve AJAX requests management
- [CLUSTER] Improve node import routine
- [CLUSTER] Improve node deletion from the gui
- [DEPENDENCIES]
  - certifi 2024.12.14 -> 2025.4.26
  - django 4.2.20 -> 4.2.21
  - maxminddb 2.5.2 -> 2.7.0
  - requests 2.31.0 0 -> 2.32.3
  - werkzeug 3.0.3 -> 3.1.3
  - setuptools 70.0.0 -> removed


## [2.25.0] - 2025-04-30
### Added
- [API_PARSER] [CISCO_MERAKI] Add support for configuration change logs
### Fixed
- [API_PARSER] [BEYONDTRUST_PRA] Catch invalid lines


## [2.24.1] - 2025-04-17
### Fixed
- [API_PARSER] [CORTEX_XDR] Update time when there is no log during one day


## [2.24.0] - 2025-04-14
### Added
- [API_PARSER] [PERCEPTION_POINT_XRAY] New collector
- [API_PARSER] [EXTRAHOP] New collector
- [FRONTEND] [RSYSLOG] New health check option
### Changed
- [DEPENDENCIES]
  - cryptography 43.0.1 -> 44.0.2
  - django 4.2.18 -> 4.2.20
  - djongo 1.3.7 -> 1.3.7.2
  - gunicorn 22.0.0 -> 23.0.0
  - jinja2 3.1.3 -> 3.1.6
  - sqlparse 0.4.4 -> 0.5.3
### Fixed
- [API_PARSER] [WAF_CLOUDFLARE] Avoid querying the API with data from more than a week ago
- [API_PARSER] [CISCO_DUO] Increment time pointer by 1s at the end of a run to avoid duplicates
- [API_PARSER] [TRENDMICRO_VISIONONE] Add retries and check for total count
- [GUI] [FRONTEND] Don't show Redis mode when unnecessary


## [2.23.0] - 2025-03-28